# mraa

./: .gitignore  99-roscube-device.rules  ADLINK_CHANGELOG  CMakeLists.txt  README.md  load_roscube.sh  postinst
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
api/mraa/: types.h
docs/: adlink_rcx-g70.md  adlink_roscube_i.md  adlink_roscube_npn1.md  adlink_roscube_npn2.md  adlink_roscube_pico_nx.md  adlink_roscube_x.md
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  README.md  gpio.c  gpio_advanced.c  i2c_example.c  led.c  pwm.c  spi.c  uart.c
examples/python/: README.md  gpio.py  gpio_advanced.py  i2c.py  led.py  pwm.py  spi.py  uart.py
include/: mraa_adv_func.h  mraa_internal_types.h
include/arm/: roscube_pico_npn1.h  roscube_pico_npn2.h  roscube_pico_npn3.h  roscube_pico_nx.h  roscube_x.h  roscube_x_580.h  roscube_x_58g.h  rugged_controller_rcx_g70.h
include/x86/: roscube_i.h
src/: CMakeLists.txt
src/arm/: arm.c  roscube_pico_npn1.c  roscube_pico_npn2.c  roscube_pico_npn3.c  roscube_pico_nx.c  roscube_x.c  roscube_x_580.c  roscube_x_58g.c  rugged_controller_rcx_g70.c
src/led/: led.c
src/x86/: roscube_i.c  x86.c
